; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_dcb_nl.c_ixgbe_dcbnl_devreset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_dcb_nl.c_ixgbe_dcbnl_devreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.net_device*)*, i32 (%struct.net_device*)* }
%struct.ixgbe_adapter = type { i32 }

@__IXGBE_RESETTING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @ixgbe_dcbnl_devreset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ixgbe_dcbnl_devreset(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.ixgbe_adapter*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.ixgbe_adapter* @netdev_priv(%struct.net_device* %4)
  store %struct.ixgbe_adapter* %5, %struct.ixgbe_adapter** %3, align 8
  br label %6

6:                                                ; preds = %12, %1
  %7 = load i32, i32* @__IXGBE_RESETTING, align 4
  %8 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %3, align 8
  %9 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %8, i32 0, i32 0
  %10 = call i64 @test_and_set_bit(i32 %7, i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %6
  %13 = call i32 @usleep_range(i32 1000, i32 2000)
  br label %6

14:                                               ; preds = %6
  %15 = load %struct.net_device*, %struct.net_device** %2, align 8
  %16 = call i64 @netif_running(%struct.net_device* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %14
  %19 = load %struct.net_device*, %struct.net_device** %2, align 8
  %20 = getelementptr inbounds %struct.net_device, %struct.net_device* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32 (%struct.net_device*)*, i32 (%struct.net_device*)** %22, align 8
  %24 = load %struct.net_device*, %struct.net_device** %2, align 8
  %25 = call i32 %23(%struct.net_device* %24)
  br label %26

26:                                               ; preds = %18, %14
  %27 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %3, align 8
  %28 = call i32 @ixgbe_clear_interrupt_scheme(%struct.ixgbe_adapter* %27)
  %29 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %3, align 8
  %30 = call i32 @ixgbe_init_interrupt_scheme(%struct.ixgbe_adapter* %29)
  %31 = load %struct.net_device*, %struct.net_device** %2, align 8
  %32 = call i64 @netif_running(%struct.net_device* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %42

34:                                               ; preds = %26
  %35 = load %struct.net_device*, %struct.net_device** %2, align 8
  %36 = getelementptr inbounds %struct.net_device, %struct.net_device* %35, i32 0, i32 0
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32 (%struct.net_device*)*, i32 (%struct.net_device*)** %38, align 8
  %40 = load %struct.net_device*, %struct.net_device** %2, align 8
  %41 = call i32 %39(%struct.net_device* %40)
  br label %42

42:                                               ; preds = %34, %26
  %43 = load i32, i32* @__IXGBE_RESETTING, align 4
  %44 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %3, align 8
  %45 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %44, i32 0, i32 0
  %46 = call i32 @clear_bit(i32 %43, i32* %45)
  ret void
}

declare dso_local %struct.ixgbe_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i64 @netif_running(%struct.net_device*) #1

declare dso_local i32 @ixgbe_clear_interrupt_scheme(%struct.ixgbe_adapter*) #1

declare dso_local i32 @ixgbe_init_interrupt_scheme(%struct.ixgbe_adapter*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
